--- a/views/user/request.phtml
+++ b/views/user/request.phtml
@@ -26,7 +26,7 @@
     </ul>
     <p>Le formulaire suivant permet une approche plus précise de ce que vous attendez de notre service.</p>
     <p>La relation client que nous offront, affienera votre demande, pour vous offrir un site web sur mesure.</p>
-    <form action="index.php?route=request" method="POST" id="request_form">
+    <form action="index.php?route=add-request" method="POST" id="request_form">
         <h2>Formulaire de demande</h2>
         <fieldset>
             <legend>Catégorie du site web :</legend>
