--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -6,6 +6,7 @@
 @use 'general/main';
 @use 'general/footer';
 @use 'general/error-succes-gestion';
+@use 'general/cookies';
 
 @use 'typo/typographie';
 
@@ -18,3 +19,4 @@
 @use 'views/contact';
 @use 'views/request';
 @use 'views/gnu';
+
