--- a/assets/styles/scss/typo/_typographie.scss
+++ b/assets/styles/scss/typo/_typographie.scss
@@ -3,8 +3,13 @@
 
 @import '../general/vars.scss';
 
+:root
+{
+    font-size: 18px;
+}
+
 html{
-    font-size: 16px;
+    
     font-family: 'Roboto', sans-serif;
     h1,h2,h3 
     {
@@ -17,7 +22,12 @@ html{
     {
         font-family: 'Kanit', sans-serif;
         font-style: italic;
-        font-weight: 200;
+        font-weight: bold;
+        letter-spacing: 3px;
+    }
+    p
+    {
+        font-size: 0.8rem;
     }
     h1
     {
@@ -35,21 +45,17 @@ html{
     h2
     {
         font-size: 1.25rem;
-        margin-left: 20px;
+        margin-left: 5%;
     }
     h3
     {
         margin: 0.5rem auto;
-        font-size: 1.3rem;
+        font-size: 1.1rem;
+        font-weight: bold;
     }
     h4  
     {
         font-size: 1.15rem;
-    }
-    #tagline //* ajouter un mediaquery pour le DESKTOP
-    {
-        font-weight: bold;
-        letter-spacing: 3px;
     }
     .card-title
     {
@@ -60,31 +66,23 @@ html{
 }
 
 @media screen and (min-width: $tabl-brkpnt){ //TABLETTE
-    html {
+    :root
+    {
         font-size: 20px;
+    }
+    html 
+    {
         background-color: #ccc;
-        h1
-        {
-            font-size: 2rem;
-        }
-        h2
-        {
-            font-size: 1.4rem;
-        }
-        h1::after
-        {
-            width: 4.25rem;
-        }
     }
   }
 
   @media screen and (min-width: $desk-brkpnt){ /* DESKTOP */
-    html {
-        font-size: 24px;
+    :root
+    {
+        font-size: 22px;
+    }
+    html 
+    {
         background-color: #ccc;
-        h1::after
-        {
-            width: 5rem;
-        }
     }
   }
