--- a/assets/styles/scss/general/_error-succes-gestion.scss
+++ b/assets/styles/scss/general/_error-succes-gestion.scss
@@ -7,13 +7,13 @@
 {
   width: 25%;
   position: absolute;
-  margin: 0 30vw;
+  margin: 50vh auto;
   text-align: center;
   padding: 0.25rem;
   font-size: 0.75rem;
   color: green;
   background-color: white;
-  border: solid 1px green;
+  border: solid 3px green;
   
 }
 .error
