--- a/views/guest/gnu.phtml
+++ b/views/guest/gnu.phtml
@@ -1,5 +1,11 @@
-<main id="homepage-container">
+
 <main id="gnu-container">
+    <!-- --------------------------- -->
+    <!-- -----HEADER-----HEADER----- -->
+    <!-- --------------------------- -->
+    <header id="main-header">
+    </header>
+    <!-- --------------------------- -->
     <h1>Politique de confidentialité</h1>
     <p>Kévin Corvaisier</p>
     <p>Type de site : Vitrine</p>
