--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -28,6 +28,7 @@
             ?></span>
         </fieldset>
         <fieldset>
+            <div class="input-separator"></div>
             <label for="password">Password</label>
             <input type="password" name="password" id="password" autocomplete="current-password" required maxlength="50" onpaste="return false;">
             <span id="error_password"<?php
