--- a/views/guest/register.phtml
+++ b/views/guest/register.phtml
@@ -28,6 +28,7 @@
             ?></span>
         </fieldset>
         <fieldset>
+            <div class="input-separator"></div>
             <label for="email">Email</label>
             <input type="email" name="email" id="email" autocomplete="email" required maxlength="50" onpaste="return false;">
             <span id="error_email"<?php
@@ -39,6 +40,7 @@
             ?></span>
         </fieldset>
         <fieldset>
+            <div class="input-separator"></div>
             <label for="password">Password</label>
             <input type="password" name="password" id="password" autocomplete="new-password" required minlength="12" onpaste="return false;">
             <span id="error_password"<?php
@@ -50,6 +52,7 @@
             ?></span>
         </fieldset>
         <fieldset>
+            <div class="input-separator"></div>
             <label for="confirm_password">Confirm password</label>
             <input type="password" name="confirm_password" id="confirm_password" autocomplete="new-password" required minlength="12" onpaste="return false;">
             <span id="error_confirm_password"<?php
