--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+#top-header {
+  z-index: 2;
+}
 #top-header #header-container {
   position: fixed;
   width: calc(100% - 32px);
@@ -47,7 +50,7 @@
 }
 #top-header #header-container .navbar #menu li a {
   color: white;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   text-decoration: none;
 }
 #top-header #header-container .navbar #menu li a:hover {
@@ -64,9 +67,6 @@
   #top-header #header-container .navbar {
     margin-top: 75px;
   }
-  #top-header #header-container .navbar #menu li a {
-    font-size: 1rem;
-  }
 }
 @media screen and (min-width: 1020px) { /* DESKTOP */
   #top-header #header-container {
@@ -74,11 +74,11 @@
     align-items: center;
     justify-content: space-between;
   }
-  #top-header #header-container .logo {
-    width: 28%;
-  }
   #top-header #header-container .burger-container {
     display: none;
+  }
+  #top-header #header-container .logo {
+    width: 28%;
   }
   #top-header #header-container .navbar {
     position: relative;
@@ -167,7 +167,7 @@
 }
 
 form {
-  margin: 0 auto;
+  margin: 1.5rem auto;
   padding: 0.5rem;
   width: 94%;
   background: linear-gradient(to bottom, rgb(47, 85, 151), rgb(47, 85, 151), rgb(143, 170, 220));
@@ -243,10 +243,10 @@ form fieldset span.input-description:last-child {
   margin-bottom: 2rem;
 }
 form fieldset div.input-separator {
-  margin: 1rem;
+  margin: 0 0.5rem 0.5rem 0.5rem;
   width: calc(100% - 1rem);
-  height: 1px;
-  background-color: cyan;
+  height: 2px;
+  background-color: rgb(255, 150, 81);
 }
 form fieldset.checkbox-field {
   display: flex;
@@ -264,13 +264,19 @@ form fieldset.checkbox-field input {
   margin: 0.5rem 1rem 0.5rem auto;
 }
 form fieldset.textarea {
-  height: 16rem;
+  height: 19rem;
 }
 form fieldset.textarea textarea {
   height: 80%;
 }
+form .notation {
+  padding: 0.5rem;
+}
 form .notation:hover {
   cursor: pointer;
+}
+form #checkbox-role-dashbaord {
+  margin: auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -291,14 +297,21 @@ form .notation:hover {
     width: 70%;
   }
 }
+html article p {
+  margin: 0;
+}
+
 .template-card {
-  height: auto;
+  height: 450px;
   width: 68%;
   margin: 1rem 0;
   padding: 0.5rem;
   border: solid 2px rgb(143, 170, 220);
   border-radius: 0 16px 0 16px;
+  display: grid;
+  grid-template-rows: 15% 60% 15%;
   text-align: center;
+  gap: 1rem;
 }
 .template-card header {
   padding: 0;
@@ -345,6 +358,7 @@ form .notation:hover {
   }
 }
 .template-card footer {
+  position: relative;
   margin: 0;
   text-align: center;
   font-size: 0.75rem;
@@ -364,8 +378,8 @@ form .notation:hover {
 }
 
 .review-card {
-  height: 200px;
-  width: 280px;
+  height: 280px;
+  width: 300px;
   margin: 1rem 0;
   padding: 0.5rem;
   border: solid 2px rgb(143, 170, 220);
@@ -374,18 +388,13 @@ form .notation:hover {
   overflow-x: hidden;
 }
 .review-card header {
-  padding: 0;
+  padding: 0.25rem;
   border-radius: 0 16px 0 16px;
   background: linear-gradient(to left, rgb(47, 85, 151), rgb(47, 85, 151), rgb(143, 170, 220));
-}
-.review-card header h3 {
   color: white;
 }
-.review-card img {
-  width: 100%;
-}
 .review-card footer {
-  margin: 0;
+  margin: 0.5rem 0;
   text-align: center;
   font-size: 0.75rem;
 }
@@ -406,7 +415,7 @@ form .notation:hover {
 input[type*=submit] {
   width: 164px;
   margin: 0 calc(50% - 82px);
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   margin-bottom: 0.5rem;
   box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
   background: linear-gradient(to bottom, rgb(143, 170, 220), white, rgb(143, 170, 220));
@@ -516,22 +525,26 @@ html textarea {
   resize: none;
 }
 html body {
+  min-height: 100vh;
   margin: 0;
-  padding: 0;
   background-image: url("../../images/backgrounds/views-back.svg");
   background-color: rgb(255, 255, 255);
   background-size: cover;
   background-position: center;
 }
 html body main {
+  min-height: 100vh;
   width: 96%;
   margin: 0 auto;
+}
+html body main ul {
+  margin-left: 8%;
 }
 html body main .text-center {
   text-align: center;
 }
 html body main #main-header {
-  padding-top: 66px;
+  padding-top: 72px;
   height: 126px;
   display: flex;
   justify-content: center;
@@ -552,7 +565,13 @@ html body main #main-header #tagline-container {
 }
 html body main #main-header #tagline-container #tagline {
   margin: 0 2rem;
-  font-size: 1.2rem;
+}
+html body #about-container #main-header, html body #gnu-container #main-header, html body #not-found-container #main-header {
+  padding-top: 0;
+  height: 72px;
+}
+html body #about-container #main-header #tagline-container, html body #gnu-container #main-header #tagline-container, html body #not-found-container #main-header #tagline-container {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -578,21 +597,22 @@ html body main #main-header #tagline-container #tagline {
   html body main #main-header #tagline-container #tagline {
     font-size: 2.25vw;
   }
+  html body #about-container #main-header, html body #gnu-container #main-header, html body #not-found-container #main-header {
+    height: 100px;
+  }
 }
 #top-footer {
   width: 100%;
-  height: auto;
-  margin-top: 2rem;
+  margin-top: 50px;
   background: linear-gradient(to bottom, rgb(143, 170, 220) 10%, rgb(47, 85, 151));
   display: flex;
   justify-content: space-between;
 }
 #top-footer nav {
   width: 45%;
-  height: 100%;
 }
 #top-footer nav ul {
-  height: 75%;
+  height: 160px;
   padding-left: 0;
   text-align: center;
   list-style-type: none;
@@ -602,6 +622,7 @@ html body main #main-header #tagline-container #tagline {
 }
 #top-footer nav ul a {
   text-decoration: none;
+  margin-top: 0.25rem;
   color: white;
   color: white;
 }
@@ -619,16 +640,28 @@ html body main #main-header #tagline-container #tagline {
   margin-left: 1vw;
 }
 
+@media screen and (min-width: 768px) {
+  /* TABLETTE */
+  #top-footer nav ul {
+    height: 100px;
+  }
+}
+@media screen and (min-width: 1020px) {
+  /* TABLETTE */
+  #top-footer nav ul {
+    height: 100px;
+  }
+}
 .success {
   width: 25%;
   position: absolute;
-  margin: 0 30vw;
+  margin: 50vh auto;
   text-align: center;
   padding: 0.25rem;
   font-size: 0.75rem;
   color: green;
   background-color: white;
-  border: solid 1px green;
+  border: solid 3px green;
 }
 
 .error {
@@ -651,35 +684,55 @@ html body main #main-header #tagline-container #tagline {
 
 .cookies {
   position: fixed;
-  bottom: 0;
   left: 0;
-  width: 100vw;
-  background-color: grey;
+  bottom: 0;
+  z-index: 2;
+  width: calc(100% - 3rem);
+  background-color: white;
+  border-top: 3px solid rgb(47, 85, 151);
   display: flex;
   justify-content: space-between; /*positionner les DIV enfants*/
   align-items: center; /*centrer verticalement*/
-  padding: 3rem;
+  padding: 1.5rem;
   opacity: 1; /*modification de cette valeur en JavaScript*/
   transition: 0.5s;
 }
-
-.cookies-btn {
+.cookies .cookies-btn {
   display: flex;
+  flex-direction: column;
 }
-
-.btn-success, .btn-deny {
+.cookies .btn-success, .cookies .btn-deny {
   color: white;
-  padding: 1rem;
-  border: none;
+  padding: 0.25rem;
+  border: 3px solid rgb(47, 85, 151);
   border-radius: 10px;
 }
-
-.btn-success {
-  background-color: #1e2337;
+.cookies .btn-success {
+  background-color: white;
+  color: rgb(47, 85, 151);
 }
-
-.btn-deny {
-  background-color: grey;
+.cookies .btn-deny {
+  margin-top: 0.25rem;
+  background-color: white;
+  color: rgb(47, 85, 151);
+}
+.cookies .btn-success:hover {
+  background-color: rgb(255, 150, 81);
+}
+.cookies .btn-deny:hover {
+  margin-top: 0.25rem;
+  background-color: rgb(255, 150, 81);
+}
+.cookies .btn-success:active {
+  background-color: rgb(196, 90, 16);
+  color: white;
+}
+.cookies .btn-deny:active {
+  background-color: rgb(196, 90, 16);
+  color: white;
+}
+.cookies .btn-success:hover, .cookies .btn-deny:hover {
+  cursor: pointer;
 }
 
 :root {
@@ -697,12 +750,17 @@ html h1, html h2, html h3 {
 }
 html #tagline {
   font-family: "Kanit", sans-serif;
+  font-size: 0.75rem;
   font-style: italic;
   font-weight: bold;
   letter-spacing: 3px;
 }
 html p {
+  margin: 0 6%;
   font-size: 0.8rem;
+}
+html ul li {
+  font-size: 0.75rem;
 }
 html h1 {
   text-align: center;
@@ -714,6 +772,7 @@ html h1::after {
   opacity: 0.5;
   width: 3rem;
   height: auto;
+  z-index: 0;
 }
 html h2 {
   font-size: 1.25rem;
@@ -730,6 +789,9 @@ html h4 {
 html .card-title {
   font-size: 1rem;
   text-overflow: ellipsis;
+}
+html footer {
+  font-size: 0.75rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -856,9 +918,16 @@ html .card-title {
   #account-container #edit-account {
     grid-area: account;
   }
+  #account-container #edit-account h2 {
+    text-align: center;
+    margin-left: 0;
+  }
   #account-container #view-requests {
     grid-area: request;
     text-align: center;
+  }
+  #account-container #view-requests h2 {
+    margin-left: 0;
   }
 }
 #dashboard-container #main-header {
