--- a/assets/styles/scss/general/_article.scss
+++ b/assets/styles/scss/general/_article.scss
@@ -3,9 +3,19 @@
 //*----------------------
 @import '../general/vars';
 
+html{
+    article
+    {
+        p
+        {
+            margin: 0;
+        }
+    }
+}
+
 .template-card
 {
-    height: auto;
+    height: 450px;
     width: 68%;
 
     margin: 1rem 0;
@@ -14,7 +24,10 @@
     border: solid 2px $light-blue;
     border-radius: 0 16px 0 16px;
 
+    display: grid;
+    grid-template-rows: 15% 60% 15%;
     text-align: center;
+    gap: 1rem;
 
     header
     {
@@ -80,10 +93,10 @@
 
     footer
     {
+        position: relative;
         margin: 0;
         text-align: center;
         font-size: 0.75rem;
-        
     }
 }
 
@@ -107,8 +120,8 @@
 
 .review-card
 {
-    height: 200px;
-    width: 280px;
+    height: 280px;
+    width: 300px;
 
     margin: 1rem 0;
     padding: 0.5rem;
@@ -121,21 +134,14 @@
 
     header
     {
-        padding: 0;
+        padding: 0.25rem;
         border-radius: 0 16px 0 16px;
         background: linear-gradient(to left, $dark-blue, $dark-blue, $light-blue);
-        h3
-        {
-            color: white;
-        }
-    }
-    img
-    {
-        width: 100%;
+        color: white;
     }
     footer
     {
-        margin: 0;
+        margin: 0.5rem 0;
         text-align: center;
         font-size: 0.75rem;
         
