--- a/assets/styles/scss/general/_footer.scss
+++ b/assets/styles/scss/general/_footer.scss
@@ -6,18 +6,16 @@
 #top-footer
 {
   width: 100%;
-  height: auto;
-  margin-top: 2rem;
+  margin-top: 50px;
   background: linear-gradient(to bottom, $light-blue 10%, $dark-blue);
   display: flex;
   justify-content: space-between;
   nav
   {
     width: 45%;
-    height: 100%;
     ul
     {
-      height: 75%;
+      height: 160px;
       padding-left: 0;
       text-align: center;
       list-style-type: none;
@@ -28,6 +26,7 @@
       a
       {
         text-decoration: none;
+        margin-top: 0.25rem;
         color: white;
         i
         {
@@ -47,6 +46,34 @@
       {
         margin-top: 0.15rem;
         margin-left: 1vw;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: $tabl-brkpnt) {
+  /* TABLETTE */
+  #top-footer
+  {
+    nav
+    {
+      ul
+      {
+        height: 100px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: $desk-brkpnt) {
+  /* TABLETTE */
+  #top-footer
+  {
+    nav
+    {
+      ul
+      {
+        height: 100px;
       }
     }
   }
