--- a/assets/styles/scss/general/_form.scss
+++ b/assets/styles/scss/general/_form.scss
@@ -4,7 +4,7 @@
 @import '../general/vars';
 
 form {
-  margin: 0 auto;
+  margin: 1.5rem auto;
   padding: 0.5rem;
   width: 94%;
   background: linear-gradient(to bottom, $dark-blue, $dark-blue, $light-blue);
@@ -87,10 +87,10 @@ form {
     }
 
     div.input-separator {
-      margin: 1rem;
+      margin: 0 0.5rem 0.5rem 0.5rem;
       width: calc(100% - 1rem);
-      height: 1px;
-      background-color: cyan;
+      height: 2px;
+      background-color: $alt-color;
     }
   }
   fieldset.checkbox-field {
@@ -110,15 +110,25 @@ form {
 
   }
   fieldset.textarea {
-    height: 16rem;
+    height: 19rem;
     textarea {
       height: 80%;
     }
   }
   
+  .notation
+  {
+    padding: 0.5rem;
+  }
+  
   .notation:hover
   {
     cursor: pointer;
+  }
+  
+  #checkbox-role-dashbaord
+  {
+    margin: auto;
   }
 }
 
