--- a/assets/styles/scss/typo/_typographie.scss
+++ b/assets/styles/scss/typo/_typographie.scss
@@ -9,7 +9,6 @@
 }
 
 html{
-    
     font-family: 'Roboto', sans-serif;
     h1,h2,h3 
     {
@@ -21,13 +20,25 @@ html{
     #tagline 
     {
         font-family: 'Kanit', sans-serif;
+        font-size: 0.75rem;
         font-style: italic;
         font-weight: bold;
         letter-spacing: 3px;
     }
     p
     {
+        margin: 0 6%;
+        //text-align: center;
         font-size: 0.8rem;
+    }
+    
+    
+    
+    ul
+    {
+        li{
+            font-size: 0.75rem;
+        }
     }
     h1
     {
@@ -41,6 +52,7 @@ html{
         opacity: 0.5;
         width: 3rem;
         height: auto;
+        z-index: 0;
     }
     h2
     {
@@ -60,8 +72,13 @@ html{
     .card-title
     {
         font-size: 1rem;
-        text-overflow:ellipsis;
+        text-overflow: ellipsis;
     }
+    footer
+    {
+        font-size: 0.75rem;
+    }
+    
 
 }
 
