--- a/views/admin/_footer.phtml
+++ b/views/admin/_footer.phtml
@@ -6,6 +6,7 @@
         <li><a href="index.php?route=dashboard">Panneau de control</a></li>
         <li><a href="index.php?route=contact">Contactez moi</a></li>
         <li><a href="index.php?route=register">Créer un compte</a></li>
+        <li><a href="index.php?route=about">À propos</a></li>
         <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
     </ul>
 </nav>
