--- a/views/guest/_footer.phtml
+++ b/views/guest/_footer.phtml
@@ -3,6 +3,7 @@
         <li><a href="index.php?route=homepage">Accueil</a></li>
         <li><a href="index.php?route=login">Se connecter</a></li>
         <li><a href="index.php?route=register">Créer un compte</a></li>
+        <li><a href="index.php?route=about">À propos</a></li>
     </ul>
 </nav>
 <nav class="contact-foot">
