--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -1,10 +1,3 @@
-<?php
-// Désactiver le cache
-header("Cache-Control: no-store, no-cache, must-revalidate, max-age=0");
-header("Pragma: no-cache");
-header("Expires: Sat, 26 Jul 1997 05:00:00 GMT");
-?>
-
 <main id="homepage-container">
     <!-- --------------------------- -->
     <!-- -----HEADER-----HEADER----- -->
@@ -72,32 +65,36 @@ header("Expires: Sat, 26 Jul 1997 05:00:00 GMT");
         ?>
 
         <article class="review-card">
-        <?php
-            if(isset($this->data["users"]))
-            {
-                $users = $this->data["users"];
-                ?><p><?= $users[$key]->getUsername(); ?></p><?php
-            }
-            ?>
-            <div class="review-notation">
-            <?php
-            for($i = 0; $i < 5; $i++)
-            {
-                
-                if($i < $review->getNotation())
+            <header>
+                <?php
+                if(isset($this->data["users"]))
                 {
-                    ?><i class="fa-solid fa-star" style="color: #ff9651;"></i><?php
+                    $users = $this->data["users"];
+                    ?><p><?= $users[$key]->getUsername(); ?></p><?php
                 }
-                else
+                ?>
+                <div class="review-notation">
+                <?php
+                for($i = 0; $i < 5; $i++)
                 {
-                    ?><i class="fa-regular fa-star" style="color: #ff9651;"></i><?php
+                    
+                    if($i < $review->getNotation())
+                    {
+                        ?><i class="fa-solid fa-star" style="color: #ff9651;"></i><?php
+                    }
+                    else
+                    {
+                        ?><i class="fa-regular fa-star" style="color: #ff9651;"></i><?php
+                    }
+                    
                 }
-                
-            }
-            ?>
-            </div>
-            <p><?= $review->getSendDate(); ?></p>
-            <p><?= $review->getContent(); ?></p>
+                ?>
+                </div>
+                <p><?= $review->getSendDate(); ?></p>
+            </header>
+            <footer>
+                <p><?= $review->getContent(); ?></p>
+            </footer>
         </article>
         <?php
         }   
