--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -41,6 +41,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" autocomplete="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
                 <span id="error_email"<?php
@@ -51,6 +52,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="password">Nouveau password</label>
                 <input type="password" name="password" id="password" autocomplete="new-password" minlength="8" maxlength="50" onpaste="return false;">
                 <span id="error_password"<?php
@@ -61,6 +63,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="confirm_password">Confirmation du password</label>
                 <input type="password" name="confirm_password" id="confirm_password" autocomplete="new-password" minlength="8" maxlength="50" onpaste="return false;">
                 <span id="error_confirm_password"<?php
@@ -71,6 +74,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="first_name">Prénom</label>
                 <input type="text" name="first_name" id="first_name" 
                 <?php 
@@ -91,6 +95,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="last_name">Nom</label>
                 <input type="text" name="last_name" id="last_name"
                 <?php 
@@ -112,6 +117,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="tel">Téléphone</label>
                 <input type="text" name="tel" id="tel"
                 <?php 
@@ -132,6 +138,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="address">Adresse</label>
                 <input type="text" name="address" id="address"
                 <?php 
@@ -152,6 +159,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="zip">Code Postal</label>
                 <input type="text" name="zip" id="zip"
                 <?php 
@@ -172,6 +180,7 @@
                     }?></span>
             </fieldset>
             <fieldset>
+                <div class="input-separator"></div>
                 <label for="city">Ville</label>
                 <input type="text" name="city" id="city"
                 <?php 
