--- a/views/user/request.phtml
+++ b/views/user/request.phtml
@@ -54,10 +54,9 @@
         <fieldset class="checkbox-field">
             <legend>Fonctionnalités de base :</legend>
 
-            <label for="cms">Utilisation d'un système de gestion de contenu (CMS)</label>
+            <label for="cms">Système de gestion de contenu (CMS)</label>
             <input type="checkbox" name="cms" id="cms">
-            <span class="input-description">Réduis la personnalisation et les possibilitées fonctionnelles. Ainsi que le coût!</span>
-
+            <span class="input-description">Optimise la gestion de contenu, simplifie la mise à jour du site.</span>
             <div class="input-separator"></div>
 
             <label for="suscribe">Inscription et gestion des utilisateurs</label>
@@ -78,7 +77,7 @@
 
             <div class="input-separator"></div>
 
-            <label for="social">Partage sur les médias sociaux</label>
+            <label for="social">Partage sociaux</label>
             <input type="checkbox" name="social" id="social">
             <span class="input-description">Permet aux utilisateurs de partager du contenu sur les réseaux sociaux.</span>
 
@@ -92,7 +91,7 @@
         <div class="fieldset-separator"></div>
 
         <fieldset class="checkbox-field">
-            <legend>Fonctionnalités e-commerce :</legend>
+            <legend>E-commerce :</legend>
 
             <label for="products-gestion">Gestion des produits</label>
             <input type="checkbox" name="products" id="products">
@@ -126,9 +125,9 @@
         <div class="fieldset-separator"></div>
 
         <fieldset class="checkbox-field">
-            <legend>Sites de discussion et de communauté :</legend>
+            <legend>Discussion et communauté :</legend>
 
-            <label for="talking-forum">Forums et discussions</label>
+            <label for="talking-forum">Forums & discussions</label>
             <input type="checkbox" name="talking-forum" id="talking-forum">
             <span class="input-description">Création de forums, discussion de sujets.</span>
 
@@ -142,7 +141,7 @@
         <div class="fieldset-separator"></div>
 
         <fieldset class="checkbox-field">
-            <legend>Sites de réservation et de services :</legend>
+            <legend>Réservation et services :</legend>
 
             <label for="reservation">Système de réservation</label>
             <input type="checkbox" name="reservation" id="reservation">
@@ -158,7 +157,7 @@
         <div class="fieldset-separator"></div>
 
         <fieldset class="checkbox-field">
-            <legend>Sites de médias et de divertissement :</legend>
+            <legend>Médias et divertissement :</legend>
 
             <label for="video-integration">Intégration de vidéos</label>
             <input type="checkbox" name="video-integration" id="video-integration">
@@ -166,7 +165,7 @@
 
             <div class="input-separator"></div>
 
-            <label for="media-reviews">Système de notation et de commentaires</label>
+            <label for="media-reviews">Notation et commentaires</label>
             <input type="checkbox" name="media-reviews" id="media-reviews">
             <span class="input-description">Notation et commentaires sur les médias.</span>
         </fieldset>
@@ -174,9 +173,9 @@
         <div class="fieldset-separator"></div>
 
         <fieldset class="checkbox_field">
-            <legend>Sites d'entreprise et professionnels :</legend>
+            <legend>Entreprises et professionnels :</legend>
 
-            <label for="admin_dashboard">Tableau de bord administrateur</label>
+            <label for="admin_dashboard">Dashboard administrateur</label>
             <input type="checkbox" name="admin-dashboard" id="admin_dashboard">
             <span class="input-description">Interface pour gérer les utilisateurs, le contenu, etc.</span>
 
@@ -196,7 +195,7 @@
         <div class="fieldset-separator"></div>
 
         <fieldset class="checkbox-field">
-            <legend>Fonctionnalités de Design :</legend>
+            <legend>Design :</legend>
 
             <label for="responsive-design">Design responsive</label>
             <input type="checkbox" name="responsive-design" id="responsive-design">
